--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,11 +3,11 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${
 spring.datasource.username=${MYSQL_USER:springuser}
 spring.datasource.password=${MYSQL_PASSWORD:12345}
 
-#spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 #UNCOMMENT WHEN FIRST UPDATE, COMMENT WHEN CREATE
 #spring.sql.init.mode=always
 #spring.sql.init.data-locations=classpath:sql/regions.sql
-spring.sql.init.encoding=UTF-8
-spring.sql.init.platform=mysql
+#spring.sql.init.encoding=UTF-8
+#spring.sql.init.platform=mysql
