--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,5 @@
-## DB CONNECTION ##
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:springteacher6db}?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Europe/Athens
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:springteacher7db}?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Europe/Athens
+
 spring.datasource.username=${MYSQL_USER:springuser}
 spring.datasource.password=${MYSQL_PASSWORD:12345}
 
@@ -9,5 +9,5 @@ spring.jpa.hibernate.ddl-auto=update
 #UNCOMMENT WHEN FIRST UPDATE, COMMENT WHEN CREATE
 #spring.sql.init.mode=always
 #spring.sql.init.data-locations=classpath:sql/regions.sql
-#spring.sql.init.encoding=UTF-8
-#spring.sql.init.platform=mysql
+spring.sql.init.encoding=UTF-8
+spring.sql.init.platform=mysql
